k8s/apps/tiny-tiny-rss/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: cthulhoo/ttrss-fpm-pgsql-static:latest@sha256:f4c1dbfc89bb224d72e2181484b8445dc7e083208a15c840fdb80b66c1b76972
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: app
              mountPath: /var/www/html
            - name: config
              mountPath: /opt/tt-rss/config.d
              readOnly: true
          securityContext:
            allowPrivilegeEscalation: false
        - name: backups
          image: cthulhoo/ttrss-fpm-pgsql-static:latest@sha256:f4c1dbfc89bb224d72e2181484b8445dc7e083208a15c840fdb80b66c1b76972
          args:
            - /opt/tt-rss/dcron.sh
            - -f
          volumeMounts:
            - name: app
              mountPath: /var/www/html
            - name: backups
              mountPath: /backups
          securityContext:
            allowPrivilegeEscalation: false
        - name: db
          image: public.ecr.aws/docker/library/postgres:17.4-bullseye@sha256:4ec06cb5516502565eed21991dffed72f41c72d7483fd023064fe2082bab3c7d
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db
              mountPath: /var/lib/postgresql/data
          securityContext:
            allowPrivilegeEscalation: false
        - name: updater
          image: cthulhoo/ttrss-fpm-pgsql-static:latest@sha256:f4c1dbfc89bb224d72e2181484b8445dc7e083208a15c840fdb80b66c1b76972
          args:
            - /opt/tt-rss/updater.sh
          volumeMounts:
            - name: app
              mountPath: /var/www/html
            - name: config
              mountPath: /opt/tt-rss/config.d
              readOnly: true
          securityContext:
            allowPrivilegeEscalation: false
        - name: web-nginx
          image: cthulhoo/ttrss-web-nginx:latest@sha256:17bbbfc67724794c48af2f775639983fea1e167cd9c523574d198c9f9dd0be95
          volumeMounts:
            - name: app
              mountPath: /var/www/html
              readOnly: true
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: app
          hostPath:
            path: /opt/k8s-volumes/tiny-tiny-rss/app
            type: DirectoryOrCreate
        - name: backups
          hostPath:
            path: /opt/k8s-volumes/tiny-tiny-rss/backups
            type: DirectoryOrCreate
        - name: config
          hostPath:
            path: /opt/k8s-volumes/tiny-tiny-rss/config
            type: DirectoryOrCreate
        - name: db
          hostPath:
            path: /opt/k8s-volumes/tiny-tiny-rss/db
            type: DirectoryOrCreate
      restartPolicy: Always
