k8s/apps/tiny-tiny-rss/resources/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route

spec:
  routes:
    - kind: Rule
      match: Host(`feed.starry.blue`)
      services:
        - name: app
          port: 80
